--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "repository": "https://github.com/ethstorage/RpcWatchdog.git",
   "author": "iteye <iteyelmp@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "./run-tests.sh"
+  },
   "dependencies": {
     "@alicloud/pop-core": "^1.8.0",
     "@sendgrid/mail": "^8.1.4",
     "dotenv": "^16.4.5",
-    "ethstorage-sdk": "/Users/lmp/IdeaProjects/ethstorage-sdk"
+    "ethstorage-sdk": "^3.0.4",
+    "puppeteer": "^24.4.0"
   }
 }
