--- a/.github/workflows/weekly-test.yml
+++ b/.github/workflows/weekly-test.yml
@@ -3,7 +3,7 @@ name: Weekly Test Script
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 1'  # 每周一 00:00 UTC 运行 (北京时间 08:00)
+    - cron: '0 0 * * 1'
 
 jobs:
   run-script:
@@ -29,7 +29,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 \
           libxkbcommon-x11-0 libxcomposite1 libxrandr2 libgbm1 \
-          libpangocairo-1.0-0 libpango-1.0-0 libasound2
+          libpangocairo-1.0-0 libpango-1.0-0 libasound2t64
 
       - name: Run test script
         run: bash run-tests.sh
